appId: ${APP_ID}
name: Loaders
---
- runFlow:
    file: ../launch.yml
    env:
      LINK: loaders
      TEXT: 'Velociraptor'
- tapOn:
    text: 'Velociraptor'
- assertVisible:
    text: 'Loading…'
- assertNotVisible:
    text: 'A small dromaeosaur from late Cretaceous Mongolia.*'
- extendedWaitUntil:
    timeout: 15000
    visible: 'Velociraptor'
- assertVisible:
    text: 'A small dromaeosaur from late Cretaceous Mongolia.*'
- runFlow:
    when:
      true: ${maestro.platform == 'web' || maestro.platform == 'android'}
    commands:
      - back
- runFlow:
    when:
      true: ${maestro.platform == 'ios'}
    commands:
      - tapOn:
          text: 'Dinos'
- assertVisible:
    text: 'Velociraptor'
- tapOn:
    text: 'Team'
- runFlow:
    when:
      true: ${maestro.platform == 'web'}
    commands:
      - assertVisible:
          text: 'Catalog'
      - assertVisible:
          text: 'Battle'
      - assertVisible:
          text: 'Velociraptor'
      - assertNotVisible:
          text: 'Current Team'
- runFlow:
    when:
      true: ${maestro.platform == 'ios' || maestro.platform == 'android'}
    commands:
      - assertVisible:
          text: 'Loading…'
      - assertNotVisible:
          text: 'Catalog'
      - assertNotVisible:
          text: 'Battle'
      - assertNotVisible:
          text: 'Velociraptor'
- extendedWaitUntil:
    timeout: 15000
    visible: 'Current Team'
- assertVisible:
    text: 'Tyrannosaurus rex, Triceratops, Velociraptor, Stegosaurus'
- tapOn:
    text: 'Battle'
- assertVisible:
    text: 'Loading…'
- assertVisible:
    text: 'Catalog'
- assertVisible:
    text: 'Team'
- assertVisible:
    text: 'Battle'
- assertNotVisible:
    text: 'Brachiosaurus vs Spinosaurus'
- extendedWaitUntil:
    timeout: 15000
    visible: 'Brachiosaurus vs Spinosaurus'
- assertVisible:
    text: 'Battle'
- runFlow:
    file: ../launch.yml
    env:
      LINK: loaders
      TEXT: 'Tyrannosaurus rex'
- scrollUntilVisible:
    element:
      text: 'Make next load fail'
- tapOn:
    text: 'Make next load fail'
- tapOn:
    text: 'Battle'
- runFlow:
    when:
      true: ${maestro.platform == 'android' || maestro.platform == 'ios'}
    commands:
      - waitForAnimationToEnd:
          timeout: 5000
      - runFlow:
          when:
            visible: 'Dismiss'
          commands:
            - tapOn: 'Dismiss'
- extendedWaitUntil:
    timeout: 3000
    visible: 'Failed to load dinosaur.'
- assertVisible:
    text: 'Try Again'
- assertNotVisible:
    text: 'Brachiosaurus vs Spinosaurus'
- runFlow:
    file: ../launch.yml
    env:
      LINK: loaders
      TEXT: 'Tyrannosaurus rex'
- scrollUntilVisible:
    element:
      text: 'Make next load fail'
- tapOn:
    text: 'Make next load fail'
- tapOn:
    text: 'Stegosaurus'
- runFlow:
    when:
      true: ${maestro.platform == 'android' || maestro.platform == 'ios'}
    commands:
      - runFlow:
          when:
            visible: 'Dismiss'
          commands:
            - tapOn: 'Dismiss'
- assertVisible:
    text: 'Failed to load dinosaur.'
- assertVisible:
    text: 'Try Again'
- assertNotVisible:
    text: 'Stegosaurus'
- runFlow:
    file: ../launch.yml
    env:
      LINK: loaders
      TEXT: 'Tyrannosaurus rex'
- tapOn:
    text: 'Tyrannosaurus rex'
- assertVisible:
    text: 'Go to Pets'
- tapOn:
    text: 'Go to Pets'
- runFlow:
    when:
      true: ${maestro.platform == 'web'}
    commands:
      - tapOn:
          text: 'Dinos, back'
- runFlow:
    when:
      true: ${maestro.platform == 'android'}
    commands:
      - tapOn:
          text: 'Navigate up'
- runFlow:
    when:
      true: ${maestro.platform == 'ios'}
    commands:
      - tapOn:
          text: 'Dinos'
- assertVisible:
    text: 'Velociraptor'
- assertNotVisible:
    text: 'Go to Pets'
- tapOn:
    text: 'Battle'
- extendedWaitUntil:
    timeout: 15000
    visible: 'Brachiosaurus vs Spinosaurus'
- assertNotVisible:
    text: 'Ankylosaurus vs Diplodocus vs Parasaurolophus vs Allosaurus'
