appId: ${APP_ID}
name: Material Top Tabs - Basic
---
- runFlow:
    file: ../launch.yml
    env:
      LINK: material-top-tabs-basic
      TEXT: 'Chat'
- assertVisible:
    text: 'make me a sandwich'
- tapOn:
    text: 'Contacts'
- extendedWaitUntil:
    visible:
      text: 'Marissa Castillo'
    timeout: 5000
- tapOn:
    text: 'Albums'
- extendedWaitUntil:
    visible:
      id: 'album-0'
    timeout: 5000
- tapOn:
    text: 'Chat'
- extendedWaitUntil:
    visible:
      text: 'make me a sandwich'
    timeout: 5000
- swipe:
    direction: LEFT
    duration: 300
- extendedWaitUntil:
    visible:
      text: 'Marissa Castillo'
    timeout: 5000
- swipe:
    direction: LEFT
    duration: 300
- extendedWaitUntil:
    visible:
      id: 'album-0'
    timeout: 5000
- swipe:
    direction: RIGHT
    duration: 300
- extendedWaitUntil:
    visible:
      text: 'Marissa Castillo'
    timeout: 5000
