appId: ${APP_ID}
name: Native Bottom Tabs - Custom Tab Bar
---
- runFlow:
    file: ../launch.yml
    env:
      LINK: native-bottom-tabs-custom-tab-bar
      TEXT: 'What is Lorem Ipsum?'
- tapOn:
    id: 'albums'
- assertVisible:
    text: 'Albums'
- assertNotVisible:
    text: 'What is Lorem Ipsum?'
- tapOn:
    text: 'Go to Contacts'
- assertVisible:
    text: 'Marissa Castillo'
- tapOn:
    id: 'albums'
- assertVisible:
    text: 'Albums'
- assertNotVisible:
    text: 'Marissa Castillo'
- tapOn:
    id: 'contacts'
- assertVisible:
    text: 'Marissa Castillo'
- tapOn:
    id: 'article'
- assertVisible:
    text: 'What is Lorem Ipsum?'
